Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
+  <link rel="icon" type="image/x-icon" href="logo.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aiyel</title>
@@ -346,4 +347,5 @@
 
 </body>
 </html>
+
 
